# vawlrathh

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  DEMO_VIDEO_GUIDE.md  DEPLOYMENT.md  Dockerfile  HF_TOKEN_SETUP.md  HUGGINGFACE_SPACE_SETUP.md  Makefile  README.md  SECRETS_CHECKLIST.md  SESSION_SUMMARY.md  SOCIAL_MEDIA_POST.md  app.py  check_pr_status.py  check_space_status.py  create_hf_pr.py  deploy_gradio_fix.py  direct_upload.py  docker-compose.yml  hf_payload_manifest.json  mcp_config.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_hf_auth.py
.github/: CLAUDE_CONFIG.yml  PULL_REQUEST_TEMPLATE.md  SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: claude_issue_assistant.py  claude_reviewer.py
.github/workflows/: claude-issue-assistant.yml  claude-pr-review.yml  sync-to-hf.yml  technical_debt_review.yml  tests.yml
docs/: ARCHITECTURE.md  CSS_THEMING_ARCHITECTURE.md  HACKATHON_FEATURES.md  HACKATHON_SUBMISSION.md  HF_DEPLOYMENT.md  HUGGINGFACE_SPACE_SETUP.md  IMPROVEMENTS_SUMMARY.md  MCP_SECURITY.md  PRIORITY_IMPLEMENTATION_GUIDE.md  STEAM_ARENA_GUIDE.md  UPLOAD_TABS_ARCHITECTURE.md  VIRAL_CONTENT.md  async_patterns.md
examples/: analyze_vawlrath_deck.py  example_workflow.py  hackathon_demo.py  sample_deck.csv  vawlrath_commander_deck.json
scripts/: check_async_patterns.sh  deploy_hf.py  hf_sync.py  run_hf_sync.sh  setup.sh  upload_to_hf.py
src/: __init__.py  exceptions.py  main.py  mcp_server.py
src/api/: __init__.py  routes.py  websocket_routes.py
src/models/: __init__.py  database.py  deck.py
src/services/: __init__.py  card_market_service.py  chat_agent.py  deck_analyzer.py  embeddings.py  event_logger.py  http_client.py  meta_intelligence.py  scryfall_service.py  sequential_reasoning.py  smart_inference.py  smart_memory.py  smart_sql.py
src/utils/: __init__.py  cache.py  csv_parser.py  mana_calculator.py  retry.py
tests/: __init__.py  conftest.py  verify_deployment.py  verify_zerogpu.py
tests/integration/: test_api.py  test_app_startup.py  test_gradio_workflows.py  test_health_endpoints.py  test_hf_space.py  test_imports_integration.py
tests/unit/: test_cache.py  test_card_market.py  test_card_market_service.py  test_chat_agent.py  test_csv_parser.py  test_deck_analyzer.py  test_embeddings.py  test_gradio_handlers.py  test_mana_calculator.py  test_retry.py  test_scryfall_service.py  test_smart_sql.py  test_workflow_yaml.py
